[package]
name = "promisqs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw_sync = "0.1.5"
serde = "1.0.204"
shared_memory = "0.12.4"
thiserror = "1.0.38"
zerocopy = "0.6.1"

[dev-dependencies]
chrono = "0.4.38"
rand = "0.8.5"
crossbeam-channel = "0.5.13"
